fixed aside 5day forecast panel icon not centered

--- a/src/style.css
+++ b/src/style.css
@@ -169,6 +169,7 @@ body {
     --font-normal: 1.3rem;
     --font-bigger: 1.6rem;
     --font-small: 1rem;
+    --border-radius: .4rem;
 }
 
 .clear {
@@ -273,7 +274,7 @@ input#location-search-bar {
     background-color: var(--background-gray);
     padding: 1rem .5rem;
     border: 1px solid var(--border-color-10);
-    border-radius: .35rem;
+    border-radius: var(--border-radius);
     width: 100%;
     box-sizing: border-box;
 }
@@ -291,7 +292,7 @@ select {
     z-index: 2;
     padding: .25rem .75rem;
     background-color: var(--background-gray);
-    border-radius: 0 0 .5rem .5rem;
+    border-radius: 0 0 var(--border-radius) var(--border-radius);
 
 }
 
@@ -299,7 +300,7 @@ select {
     padding: .75rem;
     margin: .75rem 0;
     background-color: white;
-    border-radius: .5rem;
+    border-radius: var(--border-radius);
     position: relative;
 }
 
@@ -404,7 +405,7 @@ small {
 }
 
 #main--weather-panel-wrapper>section {
-    border-radius: .4rem;
+    border-radius: var(--border-radius);
     padding: 2.5rem;
     /* box-shadow: 0 0 10px var(--text-color-10); */
 }
@@ -612,6 +613,10 @@ section.minmaxtemp>p {
     display: flex;
 }
 
+#aside--five-day-single-interval-panel>* {
+    flex: 0 0 33%;
+}
+
 #aside--today {
     display: flex;
     justify-content: space-between;
@@ -632,7 +637,7 @@ section.minmaxtemp>p {
     flex: 1 1 20%;
     align-items: center;
     justify-content: space-between;
-    border-radius: .4rem;
+    border-radius: var(--border-radius);
     padding: 1rem 0rem;
 }
 
@@ -651,6 +656,7 @@ section.minmaxtemp>p {
 }
 
 
+
 sup {
     vertical-align: super;
     font-size: .5em;
@@ -667,7 +673,9 @@ sup {
     display: flex;
     width: 100%;
     justify-content: space-between;
-    align-items: center
+    align-items: center;
+    padding: 0 .5rem;
+    box-sizing: border-box;
 }
 
 #aside--weather-panel-wrapper>#aside--five-days>#aside--five-day-single-interval-panel .date {
@@ -684,6 +692,12 @@ sup {
     font-weight: 500;
 }
 
+#aside--weather-panel-wrapper>#aside--five-days>#aside--five-day-single-interval-panel :last-child {
+    text-align: end;
+
+}
+
+
 /* smartphone design */
 
 @media only screen and (max-width: 1000px) {
@@ -692,6 +706,7 @@ sup {
         --font-normal: 2.1rem;
         --font-bigger: 2.56rem;
         --font-small: 1.6rem;
+        --border-radius: 1rem;
     }
 
     body {
@@ -713,7 +728,8 @@ sup {
 
     #main--weather-panel-wrapper>#current-weather-panel #current-weather-temp {
         font-size: 15rem;
-        letter-spacing: -3rem;
+        letter-spacing: -1rem;
+        left: -5%;
         position: relative;
     }
 
@@ -732,7 +748,7 @@ sup {
         border: 3px solid var(--background-gray);
         background-color: var(--background-gray);
         padding: 2rem 1rem;
-        border-radius: .4rem;
+        border-radius: var(--border-radius);
         justify-content: center;
     }
 
